Also include the CSV in the generated site.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@ title: Crown Commercial Service Customer Unique Reference Numbers (URNs)
 
 <body>
   <h1>{{ page.title }}</h1>
+  <p>This table lists the Customer Unique Reference Numbers (URNs) as defined by the
+  Crown Commercial Service (CCS). Suppliers using CCS frameworks may need to use these
+  URNs to report management information.</p>
+  <p>You can also download a <a href="urns.csv">Comma Separated Values (CSV)
+  spreadsheet</a> of this list.</p>
+  <p>This page is published under the
+    <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">
+      Open Government Licence v3.0</a>.
+  </p>
   <table>
     <thead>
       {% for row in site.data.urns limit:1 -%}
